@@ -249,8 +249,8 @@ if ($forum_id) {
 			$total_rows++;
 
 			$ret_val .= '<tr '. $GLOBALS['HTML']->boxGetAltRowStyle($total_rows) .'>
-				<td><a href="'.$GLOBALS['sys_urlprefix'].'/forum/message.php?msg_id='.$msg->getID().
-				'&ampgroup_id='.$group_id.'">'.
+				<td><a href="'.util_make_url ('/forum/message.php?msg_id='.$msg->getID().
+							      '&ampgroup_id='.$group_id).'">'.
 				html_image('ic/msg.png',"10","12",array("border"=>"0"));
 			/*
 				See if this message is new or not
@@ -321,8 +321,8 @@ if ($forum_id) {
 		$i=0;
 		while (($row=db_fetch_array($result)) && ($i < $max_rows)) {
 			$ret_val .= '
-				<tr '. $GLOBALS['HTML']->boxGetAltRowStyle($i) .'><td><a href="'.$GLOBALS['sys_urlprefix'].'/forum/forum.php?thread_id='.
-				$row['thread_id'].'&amp;forum_id='.$forum_id.'&amp;group_id='.$group_id.'">'.
+				<tr '. $GLOBALS['HTML']->boxGetAltRowStyle($i) .'><td><a href="'.util_make_url ('/forum/forum.php?thread_id='.
+														$row['thread_id'].'&amp;forum_id='.$forum_id.'&amp;group_id='.$group_id).'">'.
 				html_image('ic/cfolder15.png',"15","13",array("border"=>"0")) . '  &nbsp; ';
 			/*
 					See if this message is new or not
@@ -366,8 +366,8 @@ if ($forum_id) {
 
 	if ($avail_rows > $max_rows) {
 		$ret_val .= '<span class="next">
-		<a href="'.$GLOBALS['sys_urlprefix'].'/forum/forum.php?max_rows='.$max_rows.'&amp;style='.$style.'&amp;offset='.($offset+$i).
-			'&amp;forum_id='.$forum_id.'&amp;group_id='.$group_id.'">
+		<a href="'.util_make_url ('/forum/forum.php?max_rows='.$max_rows.'&amp;style='.$style.'&amp;offset='.($offset+$i).
+					  '&amp;forum_id='.$forum_id.'&amp;group_id='.$group_id).'">
 		<strong> '._('Next Messages') .
 		html_image('t.png',"15","15",array("border"=>"0","ALIGN"=>"MIDDLE")) . '</strong></a>';
 	} else {
